cmd/chain-gateway/k8s/02-chain-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chain-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chain-gateway
  template:
    metadata:
      labels:
        app: chain-gateway
    spec:
      containers:
        - name: chain-gateway
          image: uhub.service.ucloud.cn/entropypool/chain-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/ChainGateway
      volumes:
        - name: service-config
          configMap:
            name: chain-gateway-config
            items:
              - key: service-conf
                path: ChainGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chain-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50580
      targetPort: 50580
    - name: grpc
      port: 50581
      targetPort: 50581
    - name: healthz
      port: 50582
      targetPort: 50582
    - name: prometheus
      port: 50583
      targetPort: 50583
  selector:
    app: chain-gateway
