cmd/chain-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chain-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: chain-gateway-traefik-app
    k8s.kuboard.cn/workload: chain-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-chain-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/chain/v1/get/appcoins
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/coindescriptions
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/currencies
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/histories
            backend:
              serviceName: chain-gateway
              servicePort: 50570
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chain-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: chain-gateway-traefik-app
    k8s.kuboard.cn/workload: chain-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-chain-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/chain/v1/create/appcoin
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/update/appcoin
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/delete/appcoin
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/n/appcoins
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/create/coindescription
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/update/coindescription
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/create/app/coindescription
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/app/coindescriptions
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/txs
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/get/coins
            backend:
              serviceName: chain-gateway
              servicePort: 50570
          - path: /api/chain/v1/update/coin
            backend:
              serviceName: chain-gateway
              servicePort: 50570
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
